# gst-nvmanualcamerasrc

./: .gitignore  LICENSE.mit  LICENSE.nvidia  Makefile  NOTICE  README.md  README.txt  argus_version.py  gstnvmanualcamerameta.wrap  meson.build  meson_options.txt  test_png.sh
cmake/: FindArgus.cmake  FindEGL.cmake  FindNVMMAPI.cmake  FindOpenGL.cmake  FindOpenGLES.cmake  README.md
include/: consumer.hpp  gstnvarguscamera_config_make.h  gstnvarguscamera_utils.h  gstnvarguscamerasrc.hpp  gstnvdsbufferpool.h  gstnvmanualcamera_config.h  gstnvmanualcamera_config_make.h  gstnvmanualcamera_config_meson.h.in  gstnvmanualcamera_utils.h  gstnvmanualcamerasrc.hpp  impl_data.hpp  logging.hpp  meson.build  metadata.hpp  nvbuf_utils.h  nvbufsurface.h  producer.hpp  stoppable_thread.hpp
include/public/: meson.build  metadata.hpp
src/: consumer.cpp  gstnvarguscamera_utils.cpp  gstnvarguscamerasrc.cpp  gstnvmanualcamera_utils.cpp  gstnvmanualcamerasrc.cpp  meson.build  metadata.cpp  plugin.cpp  producer.cpp  pymod.cpp  stoppable_thread.cpp
test/: meson.build
test/exitcode/: demo_sharpness.cpp  demo_sharpness_overlay.cpp  meson.build  test_metadata.cpp  test_properties.cpp  test_stress_start_stop.cpp  test_string_pipeline.cpp
test/googletest/: meson.build
test/gst-check/: meson.build  test_metadata.cpp
test/gst-launch/: meson.build
test/python/: example_camera.py  meson.build  test_argus_types.py  test_metadata.py
